methods.basics.Methods.scala.error
Erreur de compilation :
Methods:5: error: type mismatch;
 found   : Unit
 required: Int
    nbpas= nbpas = nbpas +1
                 ^